--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a href=""><img src="./images/img1.jpg" alt="logic" width="370" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/img2.jpg" alt="mobileapp" width="370" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/img3.jpg" alt="webdesign" width="370" /></a>
+          </li>
         </ul>
       </section>
     </main>
