--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/img1.jpg" alt="logic" width="370" /></a>
+            <li></li>
           </li>
           <li>
             <a href=""><img src="./images/img2.jpg" alt="mobileapp" width="370" /></a>
@@ -66,6 +66,30 @@
           </li>
         </ul>
       </section>
+
+      <section>
+    <h2>Наша команда</h2>
+    <ul>
+    <li>
+    <a href=""><img src="./images/img4.jpg" alt="product" width="270" /></a>
+    <p>Ігор Дем'яненко</p>
+    <p>Product Designer</p>
+    </li>
+    <li><a href=""><img src="./images/img5.jpg" alt="frontend" width="270" /></a>
+    <p>Ольга Рєпіна</p>
+    <p>Frontend Developer</p>
+  </li>
+    <li><a href=""><img src="./images/img6.jpg" alt="marketing" width="270" /></a>
+    <p>Микола Тарасов</p>
+    <p>Marketing</p>
+  </li>
+    <li><a href=""><img src="./images/img7.jpg" alt="ui" width="270" /></a>
+    <p>Михайло Єрмаков</p>
+    <p>UI Designer</p>
+  </li>
+    </ul>
+      </section>
     </main>
+  <footer></footer>
   </body>
 </html>
