--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
     </ul>
       </section>
     </main>
-  <footer></footer>
+  <footer>
+  <a href="./index.html">WebStudio</a>
+  <address>
+  м. Київ, пр-т Лесі Українки, 26<br>
+  <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+  <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+  </address>
+  </footer>
   </body>
 </html>
