--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <li></li>
+          <a href=""><img src="./images/img1.jpg" alt="develop" width="370" /></a>
           </li>
           <li>
             <a href=""><img src="./images/img2.jpg" alt="mobileapp" width="370" /></a>
