After Nu Html Checker

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" >
     <title>Студія</title>
   </head>
   <body>
@@ -18,17 +19,15 @@
         </ul>
       </nav>
       <!--Контакти-->
-      <section>
+      <div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-      </section>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">
-          <a href="">Замовити послугу</a>
-        </button>
+        <button type="button">Замовити послугу </button>
       </section>
       <!--Діяльнсть-->
       <section>
@@ -56,13 +55,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/img1.jpg" alt="develop" width="370" /></a>
+            <a href="./index.html"><img src="./images/img1.jpg" alt="develop" width="370"></a>
           </li>
           <li>
-            <a href=""><img src="./images/img2.jpg" alt="mobileapp" width="370" /></a>
+            <a href="./index.html"><img src="./images/img2.jpg" alt="mobileapp" width="370"></a>
           </li>
           <li>
-            <a href=""><img src="./images/img3.jpg" alt="webdesign" width="370" /></a>
+            <a href="./index.html"><img src="./images/img3.jpg" alt="webdesign" width="370"></a>
           </li>
         </ul>
       </section>
@@ -71,22 +70,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/img4.jpg" alt="product" width="270" /></a>
+            <a href="./index.html"><img src="./images/img4.jpg" alt="product" width="270" ></a>
             <p>Ігор Дем'яненко</p>
             <p>Product Designer</p>
           </li>
           <li>
-            <a href=""><img src="./images/img5.jpg" alt="frontend" width="270" /></a>
+            <a href="./index.html"><img src="./images/img5.jpg" alt="frontend" width="270" ></a>
             <p>Ольга Рєпіна</p>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <a href=""><img src="./images/img6.jpg" alt="marketing" width="270" /></a>
+            <a href="./index.html"><img src="./images/img6.jpg" alt="marketing" width="270" ></a>
             <p>Микола Тарасов</p>
             <p>Marketing</p>
           </li>
           <li>
-            <a href=""><img src="./images/img7.jpg" alt="ui" width="270" /></a>
+            <a href="./index.html"><img src="./images/img7.jpg" alt="ui" width="270" ></a>
             <p>Михайло Єрмаков</p>
             <p>UI Designer</p>
           </li>
@@ -96,9 +95,9 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26<br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        м. Київ, пр-т Лесі Українки, 26<br>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
