--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href="./index.html"><img src="./images/img1.jpg" alt="develop" width="370"></a>
+            <a href="./index.html"><img src="./images/img1.jpg" alt="development" width="370"></a>
           </li>
           <li>
             <a href="./index.html"><img src="./images/img2.jpg" alt="mobileapp" width="370"></a>
