--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" >
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Студія</title>
   </head>
   <body>
@@ -19,15 +19,15 @@
         </ul>
       </nav>
       <!--Контакти-->
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу </button>
+        <button type="button">Замовити послугу</button>
       </section>
       <!--Діяльнсть-->
       <section>
@@ -50,43 +50,43 @@
           </li>
         </ul>
       </section>
-      <!--Чим займаємость-->
+      <!--Чим займаємось-->
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href="./index.html"><img src="./images/img1.jpg" alt="development" width="370"></a>
+            <a href="./index.html"><img src="./images/img1.jpg" alt="development" width="370" ></a>
           </li>
           <li>
-            <a href="./index.html"><img src="./images/img2.jpg" alt="mobileapp" width="370"></a>
+            <a href="./index.html"><img src="./images/img2.jpg" alt="mobileapp" width="370" ></a>
           </li>
           <li>
-            <a href="./index.html"><img src="./images/img3.jpg" alt="webdesign" width="370"></a>
+            <a href="./index.html"><img src="./images/img3.jpg" alt="webdesign" width="370" ></a>
           </li>
         </ul>
       </section>
-
+      <!--Команда-->>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <a href="./index.html"><img src="./images/img4.jpg" alt="product" width="270" ></a>
-            <p>Ігор Дем'яненко</p>
+            <img src="./images/img4.jpg" alt="product" width="270" >
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <a href="./index.html"><img src="./images/img5.jpg" alt="frontend" width="270" ></a>
-            <p>Ольга Рєпіна</p>
+            <img src="./images/img5.jpg" alt="frontend" width="270" >
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <a href="./index.html"><img src="./images/img6.jpg" alt="marketing" width="270" ></a>
-            <p>Микола Тарасов</p>
+            <img src="./images/img6.jpg" alt="marketing" width="270" >
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <a href="./index.html"><img src="./images/img7.jpg" alt="ui" width="270" ></a>
-            <p>Михайло Єрмаков</p>
+            <img src="./images/img7.jpg" alt="ui" width="270" >
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -95,9 +95,11 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26<br>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
