--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Студія</title>
   </head>
   <body>
@@ -13,8 +13,8 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -92,6 +92,7 @@
         </ul>
       </section>
     </main>
+    <!--Футер-->
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
