--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Портфоліо</title>
   </head>
@@ -11,89 +12,89 @@
     <header>
       <!--Блок навігації-->
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a class="logo-link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
       <!--Контакти-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
         <!--Фільтр-->
       </section>
-        <ul>
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+        <li><button type="button" class="prf-button">Усі</button></li>
+        <li><button type="button" class="prf-button">Веб-сайти</button></li>
+        <li><button type="button" class="prf-button">Додатки</button></li>
+        <li><button type="button" class="prf-button">Дизайн</button></li>
+        <li><button type="button" class="prf-button">Маркетинг</button></li>
         </ul>
       </section>
-      <!--Приклад робіт-->>
+      <!--Приклад робіт-->
       <section>
-        <ul>
+        <ul class="examples list">
           <li>
             <a href=""><img src="./images/img8.jpg" alt="tehnokryak" width="370" ></a>
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="examples-title">Технокряк</h3>
+            <p class="examples-item">Веб-сайт</p>
           </li>
           <li>
             <a href=""><img src="./images/img9.jpg" alt="poster" width="370" ></a>
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="examples-title">Постер New Orlean vs Golden Star</h3>
+            <p class="examples-item">Дизайн</p>
           </li>
           <li>
             <a href=""><img src="./images/img10.jpg" alt="seafood" width="370" ></a>
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <h3 class="examples-title">Ресторан Seafood</h3>
+            <p class="examples-item">Додаток</p>
           </li>
           <li>
            <a href=""><img src="./images/img11.jpg" alt="project-prime" width="370" ></a>
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="examples-title">Проєкт Prime</h3>
+            <p class="examples-item">Маркетинг</p>
           </li>
           <li>
             <a href=""><img src="./images/img12.jpg" alt="project-boxes" width="370" ></a>
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <h3 class="examples-title">Проєкт Boxes</h3>
+            <p class="examples-item">Додаток</p>
           </li>
           <li>
             <a href=""><img src="./images/img13.jpg" alt="no-borders" width="370" ></a>
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="examples-title">Inspiration has no Borders</h3>
+            <p class="examples-item">Веб-сайт</p>
           </li>
           <li>
             <a href=""><img src="./images/img14.jpg" alt="limited-edition" width="370" ></a>
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="examples-title">Видання Limited Edition</h3>
+            <p class="examples-item">Дизайн</p>
           </li>
           <li>
            <a href=""><img src="./images/img15.jpg" alt="project-lab" width="370" ></a>
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="examples-title">Проєкт LAB</h3>
+            <p class="examples-item">Маркетинг</p>
           </li>
           <li>
            <a href=""><img src="./images/img16.jpg" alt="growing-business" width="370" ></a>
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <h3 class="examples-title">Growing Business</h3>
+            <p class="examples-item">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
      <!--Футер-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer-block">
+      <a class="logo-footer" href="./index.html"><span class="web-logo">Web</span>Studio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <p class="adress-footer">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="contact-footer list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
