--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Студія</title>
   </head>
   <body>
-    <header>
+    <header class="header-block">
       <!--Блок навігації-->
       <nav>
         <a class="logo-link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
@@ -67,8 +67,8 @@
         </ul>
       </section>
       <!--Команда-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team-section">
+        <h2 class="team-prime">Наша команда</h2>
         <ul class="team list">
           <li>
             <img src="./images/img4.jpg" alt="product" width="270" >
