--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <title>Портфоліо</title>
   </head>
   <body>
-    <header>
+    <header class="header-block">
       <!--Блок навігації-->
       <nav>
         <a class="logo-link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
@@ -27,7 +27,7 @@
     </header>
     <main>
         <!--Фільтр-->
-      </section>
+      <div>
         <ul class="list">
         <li><button type="button" class="prf-button">Усі</button></li>
         <li><button type="button" class="prf-button">Веб-сайти</button></li>
@@ -35,7 +35,7 @@
         <li><button type="button" class="prf-button">Дизайн</button></li>
         <li><button type="button" class="prf-button">Маркетинг</button></li>
         </ul>
-      </section>
+      </div>
       <!--Приклад робіт-->
       <section>
         <ul class="examples list">
