--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <!--Фільтр-->
-      <div>
+      <section>
         <ul class="list">
         <li><button type="button" class="prf-button">Усі</button></li>
         <li><button type="button" class="prf-button">Веб-сайти</button></li>
@@ -35,54 +35,70 @@
         <li><button type="button" class="prf-button">Дизайн</button></li>
         <li><button type="button" class="prf-button">Маркетинг</button></li>
         </ul>
-      </div>
       <!--Приклад робіт-->
-      <section>
         <ul class="examples list">
           <li>
-            <a href=""><img src="./images/img8.jpg" alt="tehnokryak" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img8.jpg" alt="tehnokryak" width="370">
             <h3 class="examples-title">Технокряк</h3>
             <p class="examples-item">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/img9.jpg" alt="poster" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img9.jpg" alt="poster" width="370" >
             <h3 class="examples-title">Постер New Orlean vs Golden Star</h3>
             <p class="examples-item">Дизайн</p>
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/img10.jpg" alt="seafood" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img10.jpg" alt="seafood" width="370" >
             <h3 class="examples-title">Ресторан Seafood</h3>
             <p class="examples-item">Додаток</p>
+            </a>
           </li>
           <li>
-           <a href=""><img src="./images/img11.jpg" alt="project-prime" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img11.jpg" alt="project-prime" width="370" >
             <h3 class="examples-title">Проєкт Prime</h3>
             <p class="examples-item">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/img12.jpg" alt="project-boxes" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img12.jpg" alt="project-boxes" width="370" >
             <h3 class="examples-title">Проєкт Boxes</h3>
             <p class="examples-item">Додаток</p>
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/img13.jpg" alt="no-borders" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img13.jpg" alt="no-borders" width="370" >
             <h3 class="examples-title">Inspiration has no Borders</h3>
             <p class="examples-item">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href=""><img src="./images/img14.jpg" alt="limited-edition" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img14.jpg" alt="limited-edition" width="370" >
             <h3 class="examples-title">Видання Limited Edition</h3>
             <p class="examples-item">Дизайн</p>
+            </a>
           </li>
           <li>
-           <a href=""><img src="./images/img15.jpg" alt="project-lab" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img15.jpg" alt="project-lab" width="370" >
             <h3 class="examples-title">Проєкт LAB</h3>
             <p class="examples-item">Маркетинг</p>
+            </a>
           </li>
           <li>
-           <a href=""><img src="./images/img16.jpg" alt="growing-business" width="370" ></a>
+            <a href="" class="link-style">
+            <img src="./images/img16.jpg" alt="growing-business" width="370" >
             <h3 class="examples-title">Growing Business</h3>
             <p class="examples-item">Додаток</p>
+            </a>
           </li>
         </ul>
       </section>
