--- a/index.html
+++ b/index.html
@@ -1,11 +1,108 @@
 <html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-<script src="./js/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Студія</title>
+  </head>
+  <body>
+    <header class="header-block">
+      <!--Блок навігації-->
+      <nav>
+        <a class="logo-link" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
+        </ul>
+      </nav>
+      <!--Контакти-->
+      <ul class="contact-nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="main">
+        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="main-button">Замовити послугу</button>
+      </section>
+      <!--Діяльнсть-->
+      <section>
+        <ul class="activity list">
+          <li >
+            <h3 class="activity-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="avtivity-content">Ідейні міркування,і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3 class="activity-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="avtivity-content">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3 class="activity-title">ПЛАНУВАННЯ</h3>
+            <p class="avtivity-content">Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3 class="activity-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="avtivity-content">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <!--Чим займаємось-->
+      <section>
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="list">
+          <li>
+            <a href="./index.html"><img src="./images/img1.jpg" alt="development" width="370" ></a>
+          </li>
+          <li>
+            <a href="./index.html"><img src="./images/img2.jpg" alt="mobileapp" width="370" ></a>
+          </li>
+          <li>
+            <a href="./index.html"><img src="./images/img3.jpg" alt="webdesign" width="370" ></a>
+          </li>
+        </ul>
+      </section>
+      <!--Команда-->
+      <section class="team-section">
+        <h2 class="team-prime">Наша команда</h2>
+        <ul class="team list">
+          <li>
+            <img src="./images/img4.jpg" alt="product" width="270" >
+            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <p class="team-content">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img5.jpg" alt="frontend" width="270" >
+            <h3 class="team-title">Ольга Рєпіна</h3>
+            <p class="team-content">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img6.jpg" alt="marketing" width="270" >
+            <h3 class="team-title">Микола Тарасов</h3>
+            <p class="team-content">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img7.jpg" alt="ui" width="270" >
+            <h3 class="team-title">Михайло Єрмаков</h3>
+            <p class="team-content">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Футер-->
+    <footer class="footer-block">
+      <a class="logo-footer" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+      <address>
+        <p class="adress-footer">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="contact-footer list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  <script src="./js/script.js"></script>
+  </body>
 </html>
